<resources>
    <string name="app_name">Canang Bali</string>
    <string name="dashboard">Dashboard</string>
    <string name="information">Information</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="item">bookmark</string>
    <string name="see_more">see more</string>
    <string name="upakara">Upacara</string>
    <string name="canang">Canang</string>
    <string name="lihat_semua">lihat semua</string>
    <string name="toko">Toko</string>
    <string name="canang_bali_apps">Canang Bali Apps</string>
    <string name="dashboard_anda">Bookmark Anda</string>
    <string name="desc">Desc</string>
    <string name="instruksi">Instruksi</string>
    <string name="pilih_foto_dari_perangkat">Pilih Foto dari Perangkat</string>
    <string name="scan_foto">Scan Foto</string>
    <string name="ambil_foto_dari_kamera">Ambil Foto dari Kamera</string>
    <string name="title">Title</string>
    <string name="function_canang">Fungsi Canang</string>
    <string name="step">Perlengkapan Canang</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="nama">Nama</string>
    <string name="telepon">Telepon</string>
    <string name="loc">Alamat</string>
    <string name="address">Lokasi</string>
    <string name="call">Hubungi</string>
    <string name="product">Produk</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="man">Laki</string>
    <string name="dash">-</string>
    <string name="empty">Kosong</string>
    <string name="home_town">Alamat</string>
    <string name="age">Umur</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="first_title">canang</string>
    <string name="bali">bali</string>
    <string name="filosofi_canang">Filosofi Canang</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="ditambahkan_ke_bookmark">Ditambahkan ke Bookmark</string>
    <string name="dihapus_dari_bookmark">Dihapus dari Bookmark</string>
    <string name="share">Share</string>
    <string name="bookmark">Bookmark</string>
    <string name="buka_kamera">Buka Kamera</string>
    <string name="pilih_dari_local">Pilih Dari Local</string>
    <string name="scan">Scan</string>
    <string name="mulai_scan">Mulai</string>
    <string name="instruksi_scan">1.Foto yang bisa digunakan dengan format .jpg,.jpeg\n\n2.Carilah tempat yang cukup cahaya ketika menggunakan kamera untuk klasifikasi canang\n\n3.Pastikan ponsel anda terhubung dengan koneksi internet</string>
    <string name="hasil_scan">Hasil Scan :</string>
    <string name="result">Result</string>
    <string name="informasi_lebih_lengkap_klik_detail">Informasi lebih lengkap, klik detail</string>
    <string name="cencel">Cancel</string>
    <string name="detail">Detail</string>
    <string name="select_and_predict">Pilih dan Scan</string>
    <string name="lihat_hasil_lebih_detail">Lihat Hasil Lebih Detail</string>
    <string name="about_canang">Mengenali jenis canang dan kegunaannya.</string>
    <string name="pendaftaran">Pendaftaran</string>
    <string name="masukan_nama_depan">masukan nama depan</string>
    <string name="back_login">Kembali ke Login</string>
    <string name="register">Daftar</string>
    <string name="enter_password">masukan password</string>
    <string name="enter_email">masukan email</string>
    <string name="enter_tlp">masukan telepon</string>
    <string name="enter_adress">masukan alamat</string>
    <string name="enter_age">masukan umur</string>
    <string name="enter_gender">masukan jenis kelamin</string>
    <string name="enter_lastname">masukan nama akhir</string>
    <string name="pilih_jenis_kelamin">pilih jenis kelamin</string>
    <string name="desc_regis">Belum punya account? Daftar disini!</string>
    <string name="login">Masuk</string>
    <string name="logout">Keluar</string>
    <string name="close">Tutup</string>
    <string name="peringatan">Peringatan!</string>
    <string name="desc_under_sdk">Maaf, untuk saat ini fitur kamera hanya bisa digunakan pada versi Android 10 keatas. Sebagai opsi, anda bisa memilih foto dari galeri. Pembaruan akan segera dilakukan</string>
</resources>