<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.information.shop.detail.DetailShopActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.information.shop.detail.DetailShopActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_shop"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@color/primaryColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedSquare" />

        <TextView
            android:id="@+id/tv_dm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/nama"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/img_shop"
            app:layout_constraintTop_toTopOf="@+id/img_shop" />

        <TextView
            android:id="@+id/tv_shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="202dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/title"
            android:textColor="@color/primaryColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dm_title" />

        <TextView
            android:id="@+id/tv_dm_tlp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/telepon"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_dm_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_shop_name" />

        <TextView
            android:id="@+id/tv_shop_tlp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="202dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/_0"
            android:textColor="@color/primaryColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dm_tlp" />

        <TextView
            android:id="@+id/tv_dm_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/loc"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_dm_tlp"
            app:layout_constraintTop_toBottomOf="@+id/tv_shop_tlp" />

        <TextView
            android:id="@+id/tv_shop_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="202dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/address"
            android:textColor="@color/primaryColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dm_loc" />

        <Button
            android:id="@+id/btn_tlp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/secondaryColor"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/call"
            android:textAllCaps="false"
            android:textColor="@color/secondaryTextColor"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/img_shop"
            app:layout_constraintStart_toStartOf="@+id/img_shop"
            app:layout_constraintTop_toBottomOf="@+id/img_shop" />

        <TextView
            android:id="@+id/tv_dm_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/product"
            android:textColor="@color/secondaryTextColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_tlp" />

        <TextView
            android:id="@+id/tv_product_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/desc"
            android:textColor="@color/secondaryTextColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dm_product" />

        <TextView
            android:id="@+id/tv_dm_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/deskripsi"
            android:textColor="@color/secondaryTextColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_desc" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/desc"
            android:textColor="@color/secondaryTextColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dm_desc" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
